<resources>
    <string name="app_name">Messenger</string>
    <string name="hint_username">Username/Email</string>
    <string name="hint_password">Password</string>
    <string name="login_button_text">login</string>
    <string name="new_user_sign_up">New user ? Sign up</string>
    <string name="welcome_to_messenger">Welcome to Messenger</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password"> PassWord </string>
    <string name="register">register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stories">Stories</string>
    <string name="people">People</string>
    <string name="calls">Calls</string>
    <string name="chats">Chats</string>
    <string name="marketplace">Marketplace</string>
    <string name="message">Message</string>
    <string name="open">open navigation drawer</string>
    <string name="close">Close navigation drawer</string>
    <string name="setting_icon">setting icon</string>
    <string name="text_something">Text something...</string>
</resources>