<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/chatsFragment"
            android:background="@drawable/navigation_view_bg"
            android:icon="@drawable/baseline_chat_bubble_24"
            android:title="@string/chats" />
        <item
            android:id="@+id/nav_calls"
            android:background="@drawable/navigation_view_bg"
            android:icon="@drawable/market"
            android:title="@string/marketplace" />
        <item
            android:id="@+id/waiting_messages"
            android:icon="@drawable/waiting_message"
            android:title="@string/message" />
        <item
            android:id="@+id/archive_message"
            android:icon="@drawable/archive_message"
            android:title="@string/people" />
    </group>
</menu>