<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.SignInActivity">

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_messenger"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layoutRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgUserProfile">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputName"
            style="@style/OutlineBoxStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/name" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputEmail"
            style="@style/OutlineBoxStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/email" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassWord"
            style="@style/OutlineBoxStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassWord"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/password" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputRePassWord"
            style="@style/OutlineBoxStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextRePassWord"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="Retype Password" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_button_bg"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="@id/layoutRegister"
        app:layout_constraintStart_toStartOf="@id/layoutRegister"
        app:layout_constraintTop_toBottomOf="@id/tvRegistrationStatus" />

    <TextView
        android:id="@+id/tvReturnToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back to Login"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/btnRegister"
        app:layout_constraintStart_toStartOf="@id/btnRegister"
        app:layout_constraintEnd_toEndOf="@id/btnRegister"/>

    <TextView
        android:id="@+id/tvRegistrationStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="exception"
        android:textColor="@color/red"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/layoutRegister"
        app:layout_constraintStart_toStartOf="@id/layoutRegister"
        app:layout_constraintTop_toBottomOf="@id/layoutRegister" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgUserProfile"
        android:layout_width="130dp"
        android:layout_height="130dp"
        app:civ_border_color="@color/red"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWelcome" />

</androidx.constraintlayout.widget.ConstraintLayout>